--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -44,9 +44,9 @@ Mathematics textbooks:
 
 ```{admonition} Our objective
 
-We want to extend our discussion of differential calculus from single-real-valued univariate functions, $f(x_1)$, to single-real-valued multivariate, $f(x_1,x_2,\dots,x_n)$.
+We want to extend our discussion of differential calculus from single-real-valued univariate functions, $f(x_1)$, to single-real-valued multivariate functions, $f(x_1,x_2,\dots,x_n)$.
 
-We will be focussing on two concepts. These are **partial derivatives** and **total differentiation**.
+We will be focussing on two concepts. These are **partial derivatives** and **total derivatives**.
 ```
 
 ## Notation
@@ -167,7 +167,7 @@ $$
 :name: Simplified illustration of partial derivative.
 :width: 100%
 
-Illustrations of domain and target of $f$.
+Illustration of the partial derivative with respect to $x_k$.
 ```
 
 Note that the partial derivative, $\partial f\left(\mathbf{x}\right)/\partial x_k$, is a single-real-valued multivariate function itself, as it in general depend on all the independent variables.
@@ -186,7 +186,7 @@ $$
 
 The gradient is commonly denoted by one of $\nabla f(\mathbf{x}), D_{x} f(\mathbf{x})$, or $\operatorname{grad} f(\mathbf{x})$.
 
-As partial derivatives of multivariate functions is similar to derivatives of univariate function, the same differentiation rules apply.
+Note that when calculating the partial derivative with respect $x_k$ we treat the remaining independent variables as constants. Hence, we can use the same rules for partial differentiation as for differentiation of univariate functions. 
 
 ```{admonition} Fact: Rules for partial differentiation
 :class: important
@@ -198,15 +198,21 @@ As partial derivatives of multivariate functions is similar to derivatives of un
 
 ```
 
-Note that when calculating the partial derivative with respect $x_k$ we treat the remaining independent variables as constants.
-
 ```{admonition} Example I
 :class: tip
 
 Consider the bivariate function $y=f(x_1,x_2)=a x_1 + b x_2$. The partial derivative with respect to $x_1$ is then
 
+The partial derivative with respect to $x_1$ is then
+
 $$
 f_1(x_1,x_2)=a.
+$$
+
+The partial derivative with respect to $x_2$ is then
+
+$$
+f_1(x_1,x_2)=b.
 $$
 
 ```
@@ -214,10 +220,18 @@ $$
 ```{admonition} Example II
 :class: tip
 
-Consider the bivariate function $y=f(x_1,x_2)=x_1 x_2$. The partial derivative with respect to $x_1$ is then
+Consider the bivariate function $y=f(x_1,x_2)=x_1 x_2$.
+
+The partial derivative with respect to $x_1$ is then
 
 $$
 f_1(x_1,x_2)=x_2.
+$$
+
+The partial derivative with respect to $x_2$ is then
+
+$$
+f_2(x_1,x_2)=x_1.
 $$
 
 ```
@@ -227,120 +241,17 @@ Some terminologi:
 
 ### Some economic applications
 
-In economic analysis the partial derivative often has a straight forward interpretation
+Often in economic analysis the partial derivative has a straight forward interpretation
 - production function: marginal product
 - cost function: marginal cost
 - profit function: marginal profit
 - utility function: marginal utility
 - demand function: marginal change in demand
 
-<!-- ### Marginal utilities
-
-We will provide some illustrations of an application of the concept of a partial derivative by using a variety of different two-good utility functions. These utility functions take the form $f: \mathbb{R}_{+}^{2} \rightarrow \mathbb{R}$.
-
-$$
-U=U\left(Q_{1}, Q_{2}\right)
-$$
-
-where $U$ is the level of utility, $Q_{1}$ is the amount of good one that is consumed and $Q_{2}$ is the amount of good two that is consumed.
-
-We will consider a linear utility function, a Cobb-Douglas utility function and a CES utility function.
-
-
-```{admonition} Linear utility function
-:class: tip
-Suppose that we have a linear utility function:
-
-$$
-U\left(Q_{1}, Q_{2}\right)=\alpha Q_{1}+\beta Q_{2}
-$$
-
-The marginal utility of good one is simply the first-order partial derivative of this utility function with respect to the quantity of good one that is consumed. Thus we have
-
-$$
-M U_{1}\left(Q_{1}, Q_{2}\right)=\frac{\partial U\left(Q_{1}, Q_{2}\right)}{\partial Q_{1}}=\frac{\partial\left(\alpha Q_{1}+\beta Q_{2}\right)}{\partial Q_{1}}=\alpha
-$$
-
-The marginal utility of good two is simply the first-order partial derivative of this utility function with respect to the quantity of good two that is consumed. Thus we have
-
-$$
-M U_{2}\left(Q_{1}, Q_{2}\right)=\frac{\partial U\left(Q_{1}, Q_{2}\right)}{\partial Q_{2}}=\frac{\partial\left(\alpha Q_{1}+\beta Q_{2}\right)}{\partial Q_{2}}=\beta
-$$
-```
-
-```{admonition} Cobb-Douglas
-:class: tip
-Suppose that we have a Cobb-Douglas utility function:
-
-$$
-U\left(Q_{1}, Q_{2}\right)=Q_{1}^{\alpha} Q_{2}^{1-\alpha}
-$$
-
-The marginal utility of good one is simply the first-order partial derivative of this utility function with respect to the quantity of good one that is consumed.
-Thus we have
-
-$$
-\begin{aligned}
-M U_{1}\left(Q_{1}, Q_{2}\right) & =\frac{\partial U\left(Q_{1}, Q_{2}\right)}{\partial Q_{1}} \\
-& =\frac{\partial Q_{1}^{\alpha} Q_{2}^{1-\alpha}}{\partial Q_{1}} \\
-& =\alpha Q_{1}^{\alpha-1} Q_{2}^{1-\alpha} \\
-& =\alpha Q_{1}^{-(1-\alpha)} Q_{2}^{1-\alpha} \\
-& =\alpha\left(\frac{Q_{2}^{1-\alpha}}{Q_{1}^{1-\alpha}}\right) \\
-& =\alpha\left(\frac{Q_{2}}{Q_{1}}\right)^{1-\alpha}
-\end{aligned}
-$$
-
-The marginal utility of good two is simply the first-order partial derivative of this utility function with respect to the quantity of good two that is consumed. Thus we have
-
-$$
-\begin{aligned}
-M U_{2}\left(Q_{1}, Q_{2}\right) & =\frac{\partial U\left(Q_{1}, Q_{2}\right)}{\partial Q_{2}} \\
-& =\frac{\partial Q_{1}^{\alpha} Q_{2}^{1-\alpha}}{\partial Q_{2}} \\
-& =(1-\alpha) Q_{1}^{\alpha} Q_{2}^{1-\alpha-1} \\
-& =(1-\alpha) Q_{1}^{\alpha} Q_{2}^{-\alpha} \\
-& =(1-\alpha)\left(\frac{Q_{1}^{\alpha}}{Q_{2}^{\alpha}}\right) \\
-& =(1-\alpha)\left(\frac{Q_{1}}{Q_{2}}\right)^{\alpha}
-\end{aligned}
-$$
-```
-
-```{admonition} CES utility
+```{admonition} Marginal products of production inputs
 :class: tip
 
-Suppose that we have a constant elasticity of substitution utility function:
-
-$$
-U\left(Q_{1}, Q_{2}\right)=\left(\alpha Q_{1}^{\rho}+\beta Q_{2}^{\rho}\right)^{\frac{1}{\rho}}
-$$
-
-The marginal utility of good one is simply the first-order partial derivative of this utility function with respect to the quantity of good one that is consumed. Thus we have
-
-$$
-\begin{aligned}
-M U_{1}\left(Q_{1}, Q_{2}\right) & =\frac{\partial U\left(Q_{1}, Q_{2}\right)}{\partial Q_{1}} \\
-& =\frac{\partial\left(\left(\alpha Q_{1}^{\rho}+\beta Q_{2}^{\rho}\right)^{\frac{1}{\rho}}\right)}{\partial Q_{1}} \\
-& =\left(\frac{1}{\rho}\right)\left(\alpha Q_{1}^{\rho}+\beta Q_{2}^{\rho}\right)^{\frac{1}{\rho}-1}\left(\rho \alpha Q_{1}^{\rho-1}\right) \\
-& =\alpha Q_{1}^{\rho-1}\left(\alpha Q_{1}^{\rho}+\beta Q_{2}^{\rho}\right)^{\frac{(1-\rho)}{\rho}} .
-\end{aligned}
-$$
-
-The marginal utility of good two is simply the first-order partial derivative of this utility function with respect to the quantity of good two that is consumed. Thus we have
-
-$$
-\begin{aligned}
-M U_{2}\left(Q_{1}, Q_{2}\right) & =\frac{\partial U\left(Q_{1}, Q_{2}\right)}{\partial Q_{2}} \\
-& =\frac{\partial\left(\left(\alpha Q_{1}^{\rho}+\beta Q_{2}^{\rho}\right)^{\frac{1}{\rho}}\right)}{\partial Q_{2}} \\
-& =\left(\frac{1}{\rho}\right)\left(\alpha Q_{1}^{\rho}+\beta Q_{2}^{\rho}\right)^{\frac{1}{\rho}-1}\left(\rho \beta Q_{2}^{\rho-1}\right) \\
-& =\beta Q_{2}^{\rho-1}\left(\alpha Q_{1}^{\rho}+\beta Q_{2}^{\rho}\right)^{\frac{(1-\rho)}{\rho}} .
-\end{aligned}
-$$
-``` -->
-
-
-```{admonition} Marginal products of a Cobb-Douglas production function
-:class: tip
-
-Suppose that we have a Cobb-Douglas production function where labor (L) and capital (K) are the inputs:
+Suppose a firm's production is described by a Cobb-Douglas production function, where labor (L) and capital (K) are the inputs:
 
 $$
 Q = f(L, K)=A L^{\alpha} K^{\beta} .
@@ -368,38 +279,6 @@ $$
 
 ```
 
-<!-- ```{admonition} CES
-:class: tip
-Suppose that we have a constant elasticity of substitution production function:
-
-$$
-f(L, K)=\left(\alpha L^{\rho}+\beta K^{\rho}\right)^{\frac{1}{\rho}} .
-$$
-
-The marginal product of labour is simply the partial derivative with respect to labor. Thus we have
-
-$$
-\begin{aligned}
-M P_{L}(L, K) & =\frac{\partial f(L, K)}{\partial L} \\
-& =\frac{\partial\left(\left(\alpha L^{\rho}+\beta K^{\rho}\right)^{\frac{1}{\rho}}\right)}{\partial L} \\
-& =\left(\frac{1}{\rho}\right)\left(\alpha L^{\rho}+\beta K^{\rho}\right)^{\frac{1}{\rho}-1}\left(\rho \alpha L^{\rho-1}\right) \\
-& =\alpha L^{\rho-1}\left(\alpha L^{\rho}+\beta K^{\rho}\right)^{\frac{(1-\rho)}{\rho}} .
-\end{aligned}
-$$
-
-The marginal product of capital is simply the first-order derivative with respect to capital. Thus we have
-
-$$
-\begin{aligned}
-M P_{K}(L, K) & =\frac{\partial f(L, K)}{\partial K} \\
-& =\frac{\partial\left(\left(\alpha L^{\rho}+\beta K^{\rho}\right)^{\frac{1}{\rho}}\right)}{\partial K} \\
-& =\left(\frac{1}{\rho}\right)\left(\alpha L^{\rho}+\beta K^{\rho}\right)^{\frac{1}{\rho}-1}\left(\rho \beta K^{\rho-1}\right) \\
-& =\beta K^{\rho-1}\left(\alpha L^{\rho}+\beta K^{\rho}\right)^{\frac{(1-\rho)}{\rho}} .
-\end{aligned}
-$$
-
-``` -->
-
 ### Elasticities
 An elasticity measure the fractional response of the dependent variable, $y=f(x_1,x_2,\dots,x_n)$, to a fractional change in an independent variable, e.g. $x_k$, which can be written as
 
@@ -417,10 +296,10 @@ $$
 
 Similar to partial derivatives, elasticities measure how sensitive the dependent variable is to changes in the independent variables. Unlike partial derivatives elasticities are unit-free.
 
-```{admonition} Elasticities of the Cobb-Douglas production function
+```{admonition} Elasticities of production with respect to inputs
 :class: tip
 
-Suppose that we have a Cobb-Douglas production function:
+Suppose a firm production is described by a Cobb-Douglas production function:
 
 $$
 f(L, K)=A L^{\alpha} K^{\beta} .
