Added announcements to Esben's lecture

--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -10,6 +10,33 @@ kernelspec:
   name: python3
 ---
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+1. This week and the next week we have a guest lecturer
+
+    Dr **Esben Skriver Andersen**
+
+    - Office: 1018 HW Arndt Building
+    - Email: esbenscriver.andersen@anu.edu.au
+
+2. Online Test 4 on **Monday May 6**
+
+    - will cover last two lectures:
+      - linear systems of equations
+      - multivariate differential calculus (part 1)
+
+3. The final exam is scheduled! 
+
+    - **Friday May 31, 2pm**
+    - 3 hours exam + 15 minutes reading time
+    - closed book, no materials allowed
+    - Manning Clark Hall, room 1.04, Cultural Centre Kambri
+
+````
+
+
 # 📖 Multivariate differential calculus (part 1)
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
@@ -42,12 +69,9 @@ Mathematics textbooks:
 - {cite:ps}`spiegel1981b`: Chapters 3 and 4; pp. 35-81.
 ````
 
-```{admonition} Our objective
-
-We want to extend our discussion of differential calculus from single-real-valued univariate functions, $f(x_1)$, to single-real-valued multivariate functions, $f(x_1,x_2,\dots,x_n)$.
-
-We will be focussing on two concepts. These are **partial derivatives** and **total derivatives**.
-```
+> We want to extend our discussion of differential calculus from single-real-valued univariate functions, $f(x_1)$, to single-real-valued multivariate functions, $f(x_1,x_2,\dots,x_n)$.
+> 
+> We will be focussing on two concepts. These are **partial derivatives** and **total  derivatives**.
 
 ## Notation
 
@@ -79,6 +103,7 @@ where $y$ is refered to as the dependent variable, and $x_i$ is referred to as a
 
 ```{admonition} Example
 :class: tip
+
 Consider the single-real-valued multivariate function $f(x_1,x_2) = \sqrt{x_1 - 1} + \sqrt{x_2 - 2}$.
 - the domain of $f$ is $\left\{ (x_1,x_2) \in \mathbb{R}^{2} | x_1 \geq 1, x_2 \geq 2 \right\}$.
 - the target of $f$ is $\left\{ y \in \mathbb{R} | y \geq 0 \right\}$.
@@ -161,6 +186,7 @@ $$
 \frac{\partial f\left(\mathbf{x}\right)}{\partial x_{k}} = \lim _{h \rightarrow 0}\left\{\frac{f\left(x_{1}, \dots, x_{k} + h, x_{k+1}, \dots, x_n\right) - f\left(x_{1}, \dots, x_{k}, x_{k+1}, \dots, x_n\right)}{h}\right\} .
 \end{aligned}
 $$
+
 ```
 
 ```{figure} _static/img/lecture_08/partial_derivative.png
@@ -235,9 +261,15 @@ f_2(x_1,x_2)=x_1.
 $$
 
 ```
+
+```{admonition} Definition
+:class: caution
+
 Some terminologi:
 - If $\partial f\left(\mathbf{x}\right)/\partial x_k$ exist for each $k$, we say that $f$ is differentiable at $\mathbf{x}$.
 - If these $n$ partial derivative functions are continuous, we say that $f$ is continously differentiable at $\mathbf{x}$. This is denoted by $f \in C^{1}$ on $X$.
+
+```
 
 ### Some economic applications
 
@@ -533,9 +565,14 @@ The Hessian is commonly denoted as $H(\mathbf{x})$, $\nabla^2 f(\mathbf{x})$, $D
 
 The elements on the diagonal of the Hessian are referred to as second-order own partial derivatives, and the elements off the diagonal are referred to as second-order cross partial derivatives.
 
+```{admonition} Definition
+:class: caution
+
 Some terminologi:
 - If $f$ is twice-differentiable at every point $x \in X$, then $f$ is said to be twice-differentiable on $X$.
 - If $f$ is twice-differentiable on $X$ and $\frac{\partial^{2} f}{\partial x_{k} \partial x_{i}}$ is a continuous function on $X$ for all combinations of $i$ and $j$ then $f$ is said to be twice continuously differentiable on $X$. This is denoted by $f \in C^{2}$ on $X$.
+
+```
 
 It is possible to extend the process of differentiation for multivariate functions to even higher orders than second-order derivatives. Doing so for partial derivatives is relatively straight-forward. However, this will not be done in this course.
 
