--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -16,7 +16,7 @@ kernelspec:
 
 1. This week and the next week we have a guest lecturer
 
-    Dr **Esben Skriver Andersen**
+    Dr **Esben Scriver Andersen**
 
     - Office: 1018 HW Arndt Building
     - Email: esbenscriver.andersen@anu.edu.au
