--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -116,7 +116,7 @@ $$f(\mathbf{x}) = k x_{1}^{b_1} x_{2}^{b_2}.$$
 
 - Constant elasticity of substitution (CES) function, 
 
-$$f(\mathbf{x}) = k (c_1 x_1^{-a} + c_2 x_2^{-a})^{b/a}.$$
+$$f(\mathbf{x}) = k (c_1 x_1^{a} + c_2 x_2^{a})^{b/a}.$$
 
 ```
 
@@ -374,7 +374,7 @@ We can use these elasticities to classify the types of commodities that are bein
 - If $\varepsilon_{l}^{k}>0$, then commodities $k$ and $l$ are substitutes. 
 - If $\varepsilon_{l}^{k}<0$, then commodities $k$ and $l$ are complements.
 - The demand curve for most commodities will usually slope down. As such, we would usually expect $\varepsilon_{k}^{k}<0$.
-- However, there are circumstances in which the demand curve for a commodity can slope up over some range of prices (at least in theory). Such commodities are known as Giffen goods. In such circumstances, we would have $\varepsilon_{k}^{k}>0$ over the relevant range of prices. Note that a necessary, but not sufficient, condition for a commodity to be a Giffen good is that it be an inferior good.
+- However, there are circumstances in which the demand curve for a commodity can slope up over some range of prices (at least in theory). Such commodities are known as Giffen goods. In such circumstances, we would have $\varepsilon_{k}^{k}>0$ over the relevant range of prices. 
 
 <!-- ### Cournot aggregation
 
@@ -729,6 +729,51 @@ $$
 $$
 
 for each $j=1,2,\dots,m$
+
+```
+
+## Excercise
+
+```{admonition} Calculate the partial derivatives and elasticities of the CES production function
+:class: tip
+
+
+The CES production function is given by:
+
+$$
+Y = A \left( aL^r + bK^r \right)^{\frac{s}{r}}.
+$$
+
+The first order partial derivatives with respect to labor is:
+
+$$
+\frac{\partial Y}{\partial L} 
+&= \tfrac{s}{r} A \left( aL^r + bK^r \right)^{\frac{s}{r} - 1} arL^{r-1} \\
+&= \frac{saL^{r}}{aL^r + bK^r} \frac{Y}{L}  \\
+$$
+
+The first order partial derivatives with respect to capital is:
+
+$$
+\frac{\partial Y}{\partial K} 
+&= \tfrac{s}{r} A \left( aL^r + bK^r \right)^{\frac{s}{r} - 1} brK^{r-1} \\
+&= \frac{sbK^{r}}{aL^r + bK^r} \frac{Y}{K}  \\
+$$
+
+The elasticities of output with respect to labor and capital are:
+
+$$
+\varepsilon_L &= \frac{\partial Y}{\partial L} \frac{L}{Y} &= \frac{saL^{r}}{aL^r + bK^r} \\
+\varepsilon_K &= \frac{\partial Y}{\partial K} \frac{K}{Y} &= \frac{sbK^{r}}{aL^r + bK^r}
+$$
+
+<!-- The second order partial derivatives are:
+
+$$
+\frac{\partial^2 Y}{\partial L^2} &= s \cdot a \cdot r \cdot \frac{aL^r \cdot r(a - 1)}{(aL^r + bK^r)^2} \\
+\frac{\partial^2 Y}{\partial K^2} &= s \cdot b \cdot r \cdot \frac{bK^r \cdot r(b - 1)}{(aL^r + bK^r)^2} \\
+\frac{\partial^2 Y}{\partial L \partial K} &= s \cdot r^2 \cdot \frac{-a \cdot b \cdot L^{r} \cdot K^{r}}{(aL^r + bK^r)^2}
+$$ -->
 
 ```
 
