--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -769,6 +769,51 @@ for each $j=1,2,\dots,m$
 
 ```
 
+## Excercise
+
+```{admonition} Calculate the partial derivatives and elasticities of the CES production function
+:class: tip
+
+
+The CES production function is given by:
+
+$$
+Y = A \left( aL^r + bK^r \right)^{\frac{s}{r}}.
+$$
+
+The first order partial derivatives with respect to labor is:
+
+$$
+\frac{\partial Y}{\partial L} 
+&= \tfrac{s}{r} A \left( aL^r + bK^r \right)^{\frac{s}{r} - 1} arL^{r-1} \\
+&= \frac{saL^{r}}{aL^r + bK^r} \frac{Y}{L}  \\
+$$
+
+The first order partial derivatives with respect to capital is:
+
+$$
+\frac{\partial Y}{\partial K} 
+&= \tfrac{s}{r} A \left( aL^r + bK^r \right)^{\frac{s}{r} - 1} brK^{r-1} \\
+&= \frac{sbK^{r}}{aL^r + bK^r} \frac{Y}{K}  \\
+$$
+
+The elasticities of output with respect to labor and capital are:
+
+$$
+\varepsilon_L &= \frac{\partial Y}{\partial L} \frac{L}{Y} &= \frac{saL^{r}}{aL^r + bK^r} \\
+\varepsilon_K &= \frac{\partial Y}{\partial K} \frac{K}{Y} &= \frac{sbK^{r}}{aL^r + bK^r}
+$$
+
+<!-- The second order partial derivatives are:
+
+$$
+\frac{\partial^2 Y}{\partial L^2} &= s \cdot a \cdot r \cdot \frac{aL^r \cdot r(a - 1)}{(aL^r + bK^r)^2} \\
+\frac{\partial^2 Y}{\partial K^2} &= s \cdot b \cdot r \cdot \frac{bK^r \cdot r(b - 1)}{(aL^r + bK^r)^2} \\
+\frac{\partial^2 Y}{\partial L \partial K} &= s \cdot r^2 \cdot \frac{-a \cdot b \cdot L^{r} \cdot K^{r}}{(aL^r + bK^r)^2}
+$$ -->
+
+```
+
 <!-- ## Implicit functions
 
 Until now we have been working with explicit functions where the dependet variable, $y$, is on the left side of the equation and the independet variables, $x_i$, are on the right side
