--- a/09.multivariate_differential_calculus.md
+++ b/09.multivariate_differential_calculus.md
@@ -516,12 +516,12 @@ Thus we know that the Cobb-Douglas production function is homogeneous of degree 
 - If $(\alpha+\beta)=1$, then the Cobb-Douglas production function displays constant returns to scale; and
 - If $(\alpha+\beta)>1$, then the Cobb-Douglas production function displays increasing returns to scale.
 
-## Homothetict function
+## Homothetic function
 
 ```{admonition} Definition
 :class: caution
 
-Let $I$ be an interval on the real line. Then, $g: I \rightaarw \mathbb{R}$ is a monotonic transformation of $I$ if $g$ is a strictly increasing function on $I$.
+Let $I$ be an interval on the real line. Then, $g: I \rightarrow \mathbb{R}$ is a monotonic transformation of $I$ if $g$ is a strictly increasing function on $I$.
 
 ```
 
