--- a/09.multivariate_differential_calculus.md
+++ b/09.multivariate_differential_calculus.md
@@ -407,7 +407,7 @@ Suppose that the function $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$ is homogen
 
 $$
 \sum_{i=1}^{n} x_{i}\left(\frac{\partial f}{\partial x_{i}}\right)=r f\left(x_{1}, x_{2}, \cdots, x_{n}\right) .
-$$
+$$  
 ```
 
 This result is known as **Euler's theorem**.
@@ -516,7 +516,7 @@ Thus we know that the Cobb-Douglas production function is homogeneous of degree 
 - If $(\alpha+\beta)=1$, then the Cobb-Douglas production function displays constant returns to scale; and
 - If $(\alpha+\beta)>1$, then the Cobb-Douglas production function displays increasing returns to scale.
 
-## Homothetic function
+## Homothetict function
 
 ```{admonition} Definition
 :class: caution
