finished part two

--- a/09.multivariate_differential_calculus.md
+++ b/09.multivariate_differential_calculus.md
@@ -51,7 +51,7 @@ Mathematics textbooks:
 - {cite:ps}`spiegel1981b`: Chapters 3 and 4; pp. 35-81.
 ````
 
-> Today we will continuou our discussion of differential calculus of single-real-valued multivariate functions, $f: X \subset \mathbb{R}^n \rightarrow Y \subset \mathbb{R}$.
+> Today we will continue our discussion of differential calculus of single-real-valued multivariate functions, $f: X \subset \mathbb{R}^n \rightarrow Y \subset \mathbb{R}$.
 > 
 > We will be focussing on two concepts. These are **implicit functions** and **homogenous functions**.
 
@@ -84,6 +84,8 @@ $$
 x^2 + y^2 = 1.
 $$
 
+![Circle Line](_static/img/lecture_09/cicle_line.png)
+
 Consider the point $x=0$, $y=1$. In the neighborhood of this point $y$ is an explicit function of $x$
 
 $$
@@ -96,7 +98,7 @@ $$
 y(x) = -\sqrt{x^2 - 1}.
 $$
 
-In contrast, $y$ cannot be represented by an explicit function around the points $(0,1)$ and $(1,0)$.
+In contrast, $y$ cannot be represented by a well defined function around the points $(-1,0)$ and $(1,0)$.
 
 ```
 
@@ -223,6 +225,21 @@ $$
 
 The implicit function theorem provides conditions under which a relationship of the form $G(x,y)=c$ implies that there exists a implicit function $y=y(x)$ locally.
 
+```{admonition} Example: The line of the cicle
+:class: tip
+
+When the implicit function theorem is applied to the line of the circle we get that
+
+$$
+y'(x) 
+&= -\frac{\tfrac{\partial y^2 + x^2}{\partial x}}{\tfrac{\partial y^2 + x^2}{\partial y}} \\
+&= -\frac{2x}{2y}
+&= -\frac{x}{y}
+$$
+
+which is not defined in the point (-1,0) and (1,0) .
+```
+
 The implicit function theoriem can be extended to $G(x_1,x_2,\dots,x_n)=c$.
 
 ```{admonition} Fact (Implicit function theorem II)
@@ -258,13 +275,13 @@ $$
 We will show that near $(-1,1,2)$ we can write $y=y(x,z)$ and we will find the partial $\partial y / \partial x$ to that point
 
 $$
-- 3 \dot (-1)^2 \dot 1 +  1 \dot 2 - 4 \dot (-1) \dot 2 = - 3 + 2 + 8 = 7
+- 3 \cdot (-1)^2 \cdot 1 +  1 \cdot 2 - 4 \cdot (-1) \cdot 2 = - 3 + 2 + 8 = 7
 $$
 
 Find the partial derivatives of $G$ with respect to $y$ and $x$
 
 $$
-\frac{\partial G}{\partial x} = -6xy - 4z.
+\frac{\partial G}{\partial x} = -6xy - 4z. \\
 \frac{\partial G}{\partial y} = -3x^2 + z.
 $$
 
@@ -278,7 +295,7 @@ We conclude that there exists a $C^1$ function $y=y(x,z)$ in the neighborhood ar
 
 ```
 
-## Level curves and level surfaces
+## Level sets
 
 Level curves can be used to visualize single-real-valued bivariate functions, $f: X \subset \mathbb{R}^2 \rightarrow Y \subset \mathbb{R}$.
 
@@ -312,6 +329,13 @@ $x^2 + y^2 - z = c$ is the level surface of $w=x^2 + y^2 - z$.
 
 ```
 
+```{admonition} Fact (Level sets)
+:class: important
+
+A manifold $M$ in $\mathbb{R}^n$ is called a level set of $f(x_1,x_2,\dots,x_n)$ if the value of $f$ on every point of $M$ is some fixed $c$.
+
+```
+
 ### The slope of an isoquant curve
 
 Suppose that $f: \mathbb{R}_{+}^{2} \rightarrow \mathbb{R}_{+}$ is a production function.
@@ -340,6 +364,12 @@ $$
 $$
 
 It measures how much of one input would be needed to compensate for a one-unit loss of the other while keeping the production at the same level.
+
+Marginal rate of technical substitution between input $x_i$ and $x_j$ of a multivariate function is defined as
+
+$$
+\text{MRTS}_{x_i,x_j} = -\frac{\tfrac{\partial f(x_1,x_2,\dots,x_n)}{\partial j}}{\tfrac{\partial f(x_1,x_2,\dots,x_n)}{\partial j}}.
+$$
 
 ```{admonition} Example: $f(K,L,T)=c$
 :class: tip
@@ -374,11 +404,7 @@ $$
 
 ## Homogeneous functions
 
-Consider a function $f: S \longrightarrow \mathbb{R}$, where $S \subseteq \mathbb{R}^{n}$.
-
-This function can be written as $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$.
-
-Let $\lambda>0$ be a positive real number.
+Consider a function $f: S \longrightarrow \mathbb{R}$, where $S \subseteq \mathbb{R}^{n}$. Let $\lambda>0$ be a positive real number.
 
 ```{admonition} Definition
 :class: caution
@@ -392,101 +418,122 @@ $$
 for all $\left(x_{1}, x_{2}, \cdots, x_{n}\right) \in S$ and all $\lambda>0$.
 ```
 
+```{admonition} Example
+:class: tip
+
+The function 
+
+$$
+3x^5 y + 2x^2 y^4 - 3 x^3 y^3,
+$$
+
+is homogenous if degree 6
+
+$$
+3(\lambda x)^5 (\lambda y) + 2(\lambda x)^2 (\lambda y)^4 - 3 (\lambda x)^3 (\lambda y)^3
+&= 3\lambda^5 x^5 \lambda y + 2\lambda^2 x^2 \lambda^4 y^4 - 3 \lambda^3 x^3 \lambda^3 y^3 \\
+&= 3\lambda^6 x^5 y + 2\lambda^6 x^2 y^4 - 3 \lambda^6 x^3 y^3 \\
+&= \lambda^6 \left(3 x^5 y + 2 x^2 y^4 - 3 x^3 y^3 \right).
+$$
+
+The function 
+
+$$
+3x^{3/4} y^{1/4} + 6x + 4,
+$$
+
+is not homogenous
+
+$$
+3(\lambda x)^{3/4} (\lambda y)^{1/4} + 6(\lambda x) + 4  = 3 \lambda x^{3/4} y^{1/4} + 6\lambda x + 4.
+$$
+
+```
+
 ```{admonition} Definition
 :class: caution
 
 A function that is homogeneous of degree one is said to be **linearly homogeneous**.
 ```
 
+```{admonition} Definition
+:class: caution
+
+Let $z=f(x)$ be a $C^1$ function. If $f$ is homogenous of degree $r$, its first order partial derivatives are homogenous of degree $r-1$.
+```
+
+By definition
+
+$$
+f(\lambda x_1, \lambda x_2, \dots, \lambda x_n) = \lambda^r f(x_1,x_2,\dots,x_n).
+$$
+
+Use the chain rule wrt x_i on both sides of the equation
+
+$$
+\frac{\partial f(\lambda x_1, \lambda x_2, \dots, \lambda x_n)}{\partial x_i} \lambda = \lambda^r \frac{\partial f(x_1,x_2,\dots,x_n)}{\partial x_i},
+$$
+
+and divide both sides by $t$
+
+$$
+\frac{\partial f(\lambda x_1, \lambda x_2, \dots, \lambda x_n)}{\partial x_i} = \lambda^{r-1} \frac{\partial f(x_1,x_2,\dots,x_n)}{\partial x_i}.
+$$
+
+```{admonition} Fact 
+:class: important
+
+Let $q=f(x)$ be a $C^1$ homogenous function on $\mathbb{R}^n_+$. The tangent planes to the level sets of $f$ have constant slope along each ray from the origin.
+
+```
+
+Consider the homogenous production function on $\mathbb{R}^2_+$. We want to show that the MRTS is constant along rays from the origin. Let $(\lambda L_0,\lambda K_0)=(L_1, K_1)$. The MRTS between input $L$ and $K$ at $(L_1, K_1)$ equals
+
+$$
+\frac{f_{K}(L_1, K_1)}{f_{L}(L_1, K_1)} 
+&= \frac{f_{K}(\lambda L_0,\lambda K_0)}{f_{L}(\lambda L_0,\lambda K_0)} \\
+&= \frac{\lambda^{r-1} f_{K}( L_0, K_0)}{\lambda^{r-1} f_{L}( L_0, K_0)} \\
+&= \frac{f_{K}(L_0, K_0)}{f_{L}( L_0, K_0)} \\
+$$
+
 ## Euler's theorem
 
-```{admonition} Fact
+```{admonition} Fact (Euler's theorem)
 :class: important
 
 Suppose that the function $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$ is homogeneous of degree $r$. In this case we have
 
 $$
-\sum_{i=1}^{n} x_{i}\left(\frac{\partial f}{\partial x_{i}}\right)=r f\left(x_{1}, x_{2}, \cdots, x_{n}\right) .
+\sum_{i=1}^{n} x_{i}\frac{\partial f}{\partial x_{i}}\left(\mathbf{x} \right)=r f\left(\mathbf{x}\right).
 $$  
 ```
 
-This result is known as **Euler's theorem**.
+Recall the definition of a homogenous function of degree $r$
 
-### Applications of homogeneity
+$$
+f(\lambda \mathbf{x}) = \lambda^{r} f(\mathbf{x}). 
+$$
 
-Some applications of homogeneity include the following:
-- Returns to scale for production technologies in general.
-- Returns to scale for Cobb-Douglas production technologies.
-- Euler aggregation for a Marshallian demand function.
-- Product exhaustion under perfect competition and constant returns to scale.
+Differentiate both sides wrt $\lambda$
 
+$$
+\sum_{i=1}^{n} x_{i}\frac{\partial f}{\partial x_{i}}\left(\lambda \mathbf{x} \right) = r \lambda^{r-1} f(\mathbf{x}). 
+$$
+
+Set $\lambda=1$.
 
 ### Returns to scale
 
-Suppose that an $n$ input and one output production technology can be represented by a production function of the form
+Suppose that an $n$ input and one output production technology can be represented by a homogenous production function of the form
 
 $$
 Q=f\left(L_{1}, L_{2}, \cdots, L_{n}\right) .
 $$
 
-What happens if we increase all of the inputs by the same proportion?
-
-Specifically, suppose that we move to an input bundle of the form $\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)$, where $\lambda>0$.
-
-
-#### Decreasing returns to scale
-
-The production technology is said to display **decreasing returns to scale** if this increase in all of the inputs induces a less than proportionate change in the amount of output that can be produced.
-
-In other words, production technology is said to display decreasing returns to scale if
-
-$$
-f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)<\lambda Q
-$$
-
-which is equivalent to
-
-$$
-f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)<\lambda f\left(L_{1}, L_{2}, \cdots, L_{n}\right) .
-$$
-
-Thus the production function for a production technology that displays decreasing returns to scale is either homogeneous of degree less than one or it is not homogeneous.
-
-
-#### Constant returns to scale
-The production technology is said to display **constant returns to scale** if this increase in all of the inputs induces a proportionate change in the amount of output that can be produced.
-
-In other words, production technology is said to display constant returns to scale if
-
-$$
-f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)=\lambda Q
-$$
-
-which is equivalent to
-
-$$
-f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)=\lambda f\left(L_{1}, L_{2}, \cdots, L_{n}\right) .
-$$
-
-Thus the production function for a production technology that displays constant returns to scale will be homogeneous of degree one. (Homogeneity of degree one is sometimes referred to as linear homogeneity.)
-
-#### Increasing returns to scale
-The production technology is said to display **increasing returns to scale** if this increase in all of the inputs induces a more than proportionate change in the amount of output that can be produced.
-
-In other words, production technology is said to display increasing returns to scale if
-
-$$
-f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)>\lambda Q
-$$
-
-which is equivalent to
-
-$$
-f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)>\lambda f\left(L_{1}, L_{2}, \cdots, L_{n}\right) .
-$$
-
-Thus the production function for a production technology that displays increasing returns to scale is either homogeneous of degree more than one or it is not homogeneous.
-
+The production technology is said to display:
+- **decreasing returns to scale**: $f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)<\lambda Q$.
+- **constant returns to scale**: $f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)=\lambda Q$.
+- **increasing returns to scale**: $f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)>\lambda Q$.
 
 ### Cobb-Douglas production functions
 
@@ -525,7 +572,7 @@ Let $I$ be an interval on the real line. Then, $g: I \rightarrow \mathbb{R}$ is 
 
 ```
 
-```{admonition} Definition
+<!-- ```{admonition} Definition
 :class: caution
 
 If $\mathbf{x}, \mathbf{y} \in \mathbb{R}^n$, write
@@ -549,7 +596,7 @@ The function is strictly **monotone** if for all $\mathbf{x}, \mathbf{y} \in \ma
 $$
 x > y \Rightarrow u(\mathbf{x}) > u(\mathbf{y}).
 $$
-```
+``` -->
 
 ```{admonition} Definition
 :class: caution
@@ -563,6 +610,26 @@ $$
 for all $\mathbf{x}$ in the domain.
 ```
 
+```{admonition} Example: $G(x,y,z)=c$
+:class: tip
+
+The two functions 
+
+$$
+v_1(x,y)=x^3y^3 + xy \\
+v_2(x,y)=xy + 1,
+$$
+
+are homothetic functions with $u(x,y)=xy$ and the monotonic transformations
+
+$$
+g_1(x,y) = z^3 + z \\
+g_2(x,y) = z + 1,
+$$
+
+respectively.
+```
+
 ```{admonition} Definition
 :class: caution
 
@@ -573,11 +640,9 @@ u(\mathbf{x}) \geq u(\mathbf{y}) \Leftrightarrow u(\alpha \mathbf{x}) \geq u(\al
 $$
 ```
 
-## Cardinal versus ordinal utility
+```{admonition} Definition
+:class: caution
 
-A property if utility functions is called ordinal if it depends only on the shape and location of consumer's indifference sets. On the other hand, a property is called cardinal if it also depends on the actual amount of utility that the utility function assigns to each indifference set.
-
-We say that two functions are equivalent if they have the exact same indifference set, although they might assign different numbers to any given indifference set.
-
-Homogeneity will not necessarily be preserved under a strictly increasing transformation. An ordinal property that is somewhat similar to homogeneity is that of homotheticity.
+Let $u$ be a $C^1$ function on $\mathbb{R}^n_+$. If $u$ is homothetic then the slopes of the tangent planes of the level sets of $u$ are constant along each ray from the origin.
+```
 
