--- a/09.multivariate_differential_calculus.md
+++ b/09.multivariate_differential_calculus.md
@@ -474,7 +474,7 @@ $$
 \frac{\partial f(\lambda x_1, \lambda x_2, \dots, \lambda x_n)}{\partial x_i} \lambda = \lambda^r \frac{\partial f(x_1,x_2,\dots,x_n)}{\partial x_i},
 $$
 
-and divide both sides by $t$
+and divide both sides by $\lambda$
 
 $$
 \frac{\partial f(\lambda x_1, \lambda x_2, \dots, \lambda x_n)}{\partial x_i} = \lambda^{r-1} \frac{\partial f(x_1,x_2,\dots,x_n)}{\partial x_i}.
