--- a/09.multivariate_differential_calculus.md
+++ b/09.multivariate_differential_calculus.md
@@ -211,7 +211,7 @@ $$
 G(x,y)=c.
 $$
 
-if $\partial G\left(x^*, y(x^*)\right) / \partial y \neq 0$, then there exists a $C^1$ function $y=y(x)$ defined in neighborhood around the point $x^*$ such that
+If $\partial G\left(x^*, y(x^*)\right) / \partial y \neq 0$, then there exists a $C^1$ function $y=y(x)$ defined in neighborhood around the point $x^*$ such that
 
 - $G(x,y(x)) = c$ for all $x$ around $(x^*,y^*)$
 - $y(x^*)=y^*$
@@ -233,7 +233,7 @@ When the implicit function theorem is applied to the line of the circle we get t
 $$
 y'(x) 
 &= -\frac{\tfrac{\partial y^2 + x^2}{\partial x}}{\tfrac{\partial y^2 + x^2}{\partial y}} \\
-&= -\frac{2x}{2y}
+&= -\frac{2x}{2y} \\
 &= -\frac{x}{y}
 $$
 
@@ -251,7 +251,7 @@ $$
 G(\mathbf{x},y)=c.
 $$
 
-if $\partial G\left(\mathbf{x}^*, y(\mathbf{x}^*)\right) / \partial y \neq 0$, then there exists a $C^1$ function $y=y(\mathbf{x})$ defined in the neighborhood around the point $\mathbf{x}^*$ such that
+If $\partial G\left(\mathbf{x}^*, y(\mathbf{x}^*)\right) / \partial y \neq 0$, then there exists a $C^1$ function $y=y(\mathbf{x})$ defined in the neighborhood around the point $\mathbf{x}^*$ such that
 
 - $G(\mathbf{x},y(\mathbf{x})) = c$ for all $\mathbf{x}$ around $(\mathbf{x}^*,y^*)$
 - $y(\mathbf{x}^*)=y^*$
@@ -281,8 +281,8 @@ $$
 Find the partial derivatives of $G$ with respect to $y$ and $x$
 
 $$
-\frac{\partial G}{\partial x} = -6xy - 4z. \\
-\frac{\partial G}{\partial y} = -3x^2 + z.
+\frac{\partial G}{\partial x} &= -6xy - 4z. \\
+\frac{\partial G}{\partial y} &= -3x^2 + z.
 $$
 
 The partial derivative is given by the implicit function theorem as
@@ -329,6 +329,8 @@ $x^2 + y^2 - z = c$ is the level surface of $w=x^2 + y^2 - z$.
 
 ```
 
+This can of course be generalized to higher order functions, $f: X \subset \mathbb{R}^n \rightarrow Y \subset \mathbb{R}$
+
 ```{admonition} Fact (Level sets)
 :class: important
 
@@ -368,7 +370,7 @@ It measures how much of one input would be needed to compensate for a one-unit l
 Marginal rate of technical substitution between input $x_i$ and $x_j$ of a multivariate function is defined as
 
 $$
-\text{MRTS}_{x_i,x_j} = -\frac{\tfrac{\partial f(x_1,x_2,\dots,x_n)}{\partial j}}{\tfrac{\partial f(x_1,x_2,\dots,x_n)}{\partial j}}.
+\text{MRTS}_{x_i,x_j} = -\frac{\tfrac{\partial f(x_1,x_2,\dots,x_n)}{\partial x_j}}{\tfrac{\partial f(x_1,x_2,\dots,x_n)}{\partial x_i}}.
 $$
 
 ```{admonition} Example: $f(K,L,T)=c$
@@ -427,7 +429,7 @@ $$
 3x^5 y + 2x^2 y^4 - 3 x^3 y^3,
 $$
 
-is homogenous if degree 6
+is homogenous of degree 6
 
 $$
 3(\lambda x)^5 (\lambda y) + 2(\lambda x)^2 (\lambda y)^4 - 3 (\lambda x)^3 (\lambda y)^3
@@ -531,8 +533,8 @@ Q=f\left(L_{1}, L_{2}, \cdots, L_{n}\right) .
 $$
 
 The production technology is said to display:
-- **decreasing returns to scale**: $f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)<\lambda Q$.
 - **constant returns to scale**: $f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)=\lambda Q$.
+- **decreasing returns to scale**: $f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)<\lambda Q$.
 - **increasing returns to scale**: $f\left(\lambda L_{1}, \lambda L_{2}, \cdots, \lambda L_{n}\right)>\lambda Q$.
 
 ### Cobb-Douglas production functions
@@ -568,7 +570,7 @@ Thus we know that the Cobb-Douglas production function is homogeneous of degree 
 ```{admonition} Definition
 :class: caution
 
-Let $I$ be an interval on the real line. Then, $g: I \rightarrow \mathbb{R}$ is a monotonic transformation of $I$ if $g$ is a strictly increasing function on $I$.
+Let $I$ be an interval on the real line. Then, $g: I \rightarrow \mathbb{R}$ is a monotonic transformation on $I$ if $g$ is a strictly increasing function on $I$.
 
 ```
 
@@ -633,7 +635,7 @@ respectively.
 ```{admonition} Definition
 :class: caution
 
-Let $u: \mathbb{R}_{+}^n \rightarrow \mathbb{R}$ be a strictly monotonic function. Then, $u$ is a homothetic if and only if for all $\mathbb{x}$ and $\mathbb{y}$ in $\mathbb{R}^n_+$,
+Let $u: \mathbb{R}_{+}^n \rightarrow \mathbb{R}$ be a strictly monotonic function. Then, $u$ is a homothetic if and only if for all $\mathbf{x}$ and $\mathbf{y}$ in $\mathbb{R}^n_+$,
 
 $$
 u(\mathbf{x}) \geq u(\mathbf{y}) \Leftrightarrow u(\alpha \mathbf{x}) \geq u(\alpha \mathbf{y}) \text{ for all } \alpha > 0.
