Additional material link

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1727,3 +1727,7 @@ $$
 ```
 
 ````
+
+```{dropdown} Further reading and self-learning
+- Great video on Taylor series [YouTube Morphocular](https://youtu.be/0HaBNdmUWXY?si=Fcps8tuAvEJMOyOR)
+```
